--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.container {
+  min-height: calc(100vh - 70px - 64px);
+}
+
+nav {
+  padding: 0 25px
 }
