Add Preloader and Search input

--- a/src/index.css
+++ b/src/index.css
@@ -8,48 +8,44 @@ body {
 }
 
 nav {
-  padding: 0 25px
+  padding: 0 25px;
 }
 
 .container {
   min-height: calc(100vh - 70px - 64px);
   width: 100%;
-  padding: 0 40px;
-  display: flex;
+  padding: 1rem 1.5rem;
+  text-align: center;
+  /* display: flex;
   justify-content: center;
-  align-items: center;
-
+  align-items: center; */
 }
 
 .catalog {
-
-  display: flex;
+  /* display: flex;
   flex-wrap: wrap;
   flex-direction: row;
   justify-content: flex-start;
-  width: 90vw;
-  align-items: center;
-
-  
-
-
+  width: 90vw; */
+  /* align-items: center; */
+  text-align: initial;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  gap: 1rem;
 }
 
 .row {
   /* margin: 0 15px; */
-  position: relative;;
-
+  position: relative;
 }
 
 .card-image img {
-  height: 200px;
-
-
+  /* height: 200px; */
 }
 
-
 .card {
-  height: 100%;
+  /* height: 100%;
   width: 150px;
-
+  /* margin: 10px; */
+  /* min-height: max-content;  */
 }
